Delpy-app_stacks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
      matchLabels:
        app: redis
  template:
      metadata:
            labels:
                app: redis
      spec:
            containers:
              - image: redis:latest
                name: redis
                ports:
                  - containerPort: 6379


---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-forum
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-forum
  template:
    metadata:
      labels:
        app: flask-forum
    spec:
      containers:
        - image: cb5555/forumweb-web:latest
          name: flask-forum
          ports:
           - containerPort: 8005
---
apiVersion: v1
kind: Service
metadata:
  name: flask-forum-service
spec:
  type: NodePort
  selector:
    app: flask-forum
  ports:

    - protocol: TCP
      port: 8005
      targetPort: 8005
      nodePort: 30005


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forum-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: localhost
      http:
        paths:  # <--- BẠN BỊ THIẾU DÒNG NÀY (Danh sách các đường dẫn)
          - path: /  # <--- Có dấu gạch ngang đầu dòng để thể hiện đây là 1 phần tử của mảng
            pathType: Prefix
            backend:
              service:
                name: flask-forum-service
                port:
                  number: 8005
