Deploy_forum_app_stacks_k8s.yaml
#redis deployment + service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
      matchLabels:
        app: redis
  template:
      metadata:
            labels:
                app: redis
      spec:
            containers:
              - image: redis:latest
                name: redis
                ports:
                  - containerPort: 6379


---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379

---
# 2. Service để Flask App gọi được bằng tên "sqlserver"
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
spec:
  selector:
    app: sqlserver
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433

---
# 3. Deployment chạy SQL Server 2019
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
        - name: sqlserver
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: sql-data
              mountPath: /var/opt/mssql
            - name: sql-script-volume
              mountPath: /ForumWEB.sql # Mount file script vào thư mục gốc của container
              subPath: ForumWEB.sql
      volumes:
        - name: sql-data
          persistentVolumeClaim:
            claimName: sql-data-pvc
        - name: sql-script-volume
          configMap:
            name: forum-sql-script



---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-forum
spec:
  replicas: 4
  selector:
    matchLabels:
      app: flask-forum
  template:
    metadata:
      labels:
        app: flask-forum
    spec:
      containers:
        - image: cb5555/forumweb-web:latest
          name: flask-forum
          ports:
           - containerPort: 8005
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "300Mi"
              cpu: "1000000m"

---
apiVersion: v1
kind: Service
metadata:
  name: flask-forum-service
spec:
  type: NodePort
  selector:
    app: flask-forum
  ports:

    - protocol: TCP
      port: 8005
      targetPort: 8005
      nodePort: 30005


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forum-ingress
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /  # <--- Có dấu gạch ngang đầu dòng để thể hiện đây là 1 phần tử của mảng
            pathType: Prefix
            backend:
              service:
                name: flask-forum-service
                port:
                  number: 8005
